--- a/templates/404.html
+++ b/templates/404.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% block style%}
+    {% include "inc-style.html"%}
+{% endblock style %}
+
 {% block mainbody %}
     <h3>Requested page not found</h3>
     <br>Parameters were passed:
