--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,5 +1,9 @@
 
 {% extends "base.html" %}
+{% block style%}
+    {% include "inc-style.html"%}
+{% endblock style %}
+
 {% block mainbody %}
     <p>e-mail: info@guitars.com
         <br>phone: 123-456-789
