--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
-
 {% extends "base.html" %}
+{% block style%}
+    {% include "inc-style.html"%}
+{% endblock style %}
+
 {% block mainbody %}
     <p><h3>This is the main text area for the Index page </h3></p>
     <br>Parameters were passed: 
