--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% block style%}
+    {% include "inc-style.html"%}
+{% endblock style %}
+
 {% block mainbody %}
     <h3>This is the main text area for the About page </h3>
     <br>Parameters were passed:
